# N-dimensional-tree

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: tree.dot
include/: tree.hpp
source/: main.cpp
test/end-to-end/: CMakeLists.txt  end-to-end.cpp
test/unit-test/: CMakeLists.txt  unit-test.cpp
